VR: Fix rounding error in VSync computation.

Also fixes the timebase being off by a factor of 1000, though this
didn't actually cause issues...

Bug: 745866
Change-Id: Ia29646ce935bf66b45a5f6aee10bf7715a3fea17