chrome/browser/android/vr_shell/vr_shell_delegate.cc
@@ -117,7 +117,7 @@ void VrShellDelegate::UpdateVSyncInterval(JNIEnv* env,
                                           jlong timebase_nanos,
                                           jlong interval_micros) {
   vsync_timebase_ = base::TimeTicks() +
-                    base::TimeDelta::FromMilliseconds(timebase_nanos / 1000);
+                    base::TimeDelta::FromMicroseconds(timebase_nanos / 1000);
   vsync_interval_ = base::TimeDelta::FromMicroseconds(interval_micros);
   if (gvr_delegate_) {
     gvr_delegate_->UpdateVSyncInterval(vsync_timebase_, vsync_interval_);
